--- a/pug/blocks/_block-imgl-text.pug
+++ b/pug/blocks/_block-imgl-text.pug
@@ -7,8 +7,8 @@
 		.content-title
 			.content-titlebox
 				h2 Новые технологии на ВМЗ в 2019
-	.card.cardThird
-		.cardThird__imgbox.card__imgbox(style='background-image: url(img/block-img-01.jpg);')
+	.card.card-third
+		.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-01.jpg);')
 			.card-warning-text.hide
 				p
 	.card.cardTwoThirds
@@ -18,8 +18,8 @@
 			p
 				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 			a.button.card__more(href='#') Читать далее
-	.card.cardThird
-		.cardThird__imgbox.card__imgbox(style='background-image: url(img/block-img-02.jpg);')
+	.card.card-third
+		.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-02.jpg);')
 			.card-warning-text.hide
 				p
 	.card.cardTwoThirds
