--- a/pug/blocks/_block-imgt-textb.pug
+++ b/pug/blocks/_block-imgt-textb.pug
@@ -7,19 +7,19 @@
 		.content-title
 			.content-titlebox
 				h2 Новые технологии на ВМЗ в 2019
-	.card.cardHalf
-		.cardHalf-imgbox.card__imgbox(style='background-image: url(img/block-img-03.jpg);')
+	.card.card-half
+		.card-half-imgbox.card__imgbox(style='background-image: url(img/block-img-03.jpg);')
 			.card-warning-text.hide
 				p
-		.card__text.cardHalf__text
+		.card__text.card-half__text
 			p
 				| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.
 			a.button.card__more(href='#') Читать далее
-	.card.cardHalf
-		.cardHalf-imgbox.card__imgbox(style='background-image: url(img/block-img-08.jpg);')
+	.card.card-half
+		.card-half-imgbox.card__imgbox(style='background-image: url(img/block-img-08.jpg);')
 			.card-warning-text.hide
 				p
-		.card__text.cardHalf__text
+		.card__text.card-half__text
 			p
 				| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления
 			a.button.card__more(href='#') Читать далее
