--- a/pug/cards/_card-half-slider.pug
+++ b/pug/cards/_card-half-slider.pug
@@ -1,11 +1,11 @@
 -var cardSettings = {};
-.card.cardHalf-slider
-	.cardHalf-slider-wrap.card-wrap
-		.cardHalf-slider__item
-			.cardHalf-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
-		.cardHalf-slider__item
-			.cardHalf-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
-		.cardHalf-slider__item
-			.cardHalf-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
-		.cardHalf-slider__item
-			.cardHalf-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
+.card.card-half-slider
+	.card-half-slider-wrap.card-wrap
+		.card-half-slider__item
+			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
+		.card-half-slider__item
+			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
+		.card-half-slider__item
+			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
+		.card-half-slider__item
+			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
