--- a/pug/cards/_cards-half.pug
+++ b/pug/cards/_cards-half.pug
@@ -1,7 +1,7 @@
 .cards.cards-half
-	.card.cardHalf.cardHalf_fullHeightImg
-		.card-wrap.cardHalf-wrap(style='background-image: url(img/news-half-full-img-01.jpg);')
-			.card__content.cardHalf__content
+	.card.card-half.card-half_fullHeightImg
+		.card-wrap.card-half-wrap(style='background-image: url(img/news-half-full-img-01.jpg);')
+			.card__content.card-half__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag-o.button-tag-o_light Отдельные новости
@@ -12,7 +12,7 @@
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardHalf-title
+				.card__title.card-half-title
 					a(href='#')
 						| Насосно-компрессорные 
 						br
@@ -21,12 +21,12 @@
 						| трубы ТЭСЦ-1
 				.card-date.card-date_light
 					span 24 Сентября 2018
-	.card.cardHalf
-		.card-wrap.cardHalf-wrap
-			.cardHalf-imgbox.card__imgbox(style='background-image: url(img/news-half-img-01.jpg);')
+	.card.card-half
+		.card-wrap.card-half-wrap
+			.card-half-imgbox.card__imgbox(style='background-image: url(img/news-half-img-01.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardHalf__content
+			.card__content.card-half__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag-o Новости ПС
@@ -37,7 +37,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardHalf-title
+				.card__title.card-half-title
 					a(href='#')
 						| Насосно-компрессорные 
 						br
