--- a/pug/cards/_cards-third.pug
+++ b/pug/cards/_cards-third.pug
@@ -1,10 +1,10 @@
 .cards.cards-third
-	.card.cardThird
-		.card-wrap.cardThird-wrap
-			.cardThird__imgbox.card__imgbox(style='background-image: url(img/news-third-01.jpg);')
+	.card.card-third
+		.card-wrap.card-third-wrap
+			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-01.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardThird__content
+			.card__content.card-third__content
 				.tagbox
 					.tag
 						button.button.button-tag Региональные новости
@@ -15,19 +15,19 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardThird__title
+				.card__title.card-third__title
 					a(href='#')
 						| Насосно-компрессорные 
 						br
 						| трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardThird
-		.card-wrap.cardThird-wrap
-			.cardThird__imgbox.card__imgbox(style='background-image: url(img/news-third-02.jpg);')
+	.card.card-third
+		.card-wrap.card-third-wrap
+			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-02.jpg);')
 				.card-warning-text
 					p Оценка: ПЛОХО!
-			.card__content.cardThird__content
+			.card__content.card-third__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ПС
@@ -38,16 +38,16 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardThird__title
+				.card__title.card-third__title
 					a(href='#')
 						| Обход управлющего 
 						br
 						|  директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardThird.cardThird_fullHeightImg
-		.card-wrap.cardThird-wrap_fullHeightImg(style='background-image: url(img/news-third-full-img-01.jpg);')
-			.card__content.cardThird__content
+	.card.card-third.card-third_fullHeightImg
+		.card-wrap.card-third-wrap_fullHeightImg(style='background-image: url(img/news-third-full-img-01.jpg);')
+			.card__content.card-third__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ПС
@@ -58,7 +58,7 @@
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardThird__title
+				.card__title.card-third__title
 					a(href='#')
 						| Насосно-компрессорные 
 						br
