--- a/pug/cards/_cards-two-thirds_left.pug
+++ b/pug/cards/_cards-two-thirds_left.pug
@@ -22,12 +22,12 @@
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardThird
-		.card-wrap.cardThird-wrap
-			.cardThird__imgbox.card__imgbox(style='background-image: url(img/news-third-03.jpg);')
+	.card.card-third
+		.card-wrap.card-third-wrap
+			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-03.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardThird__content
+			.card__content.card-third__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ПС
@@ -38,7 +38,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardThird__title
+				.card__title.card-third__title
 					a(href='#')
 						| Обход управлющего 
 						br
