--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -10,8 +10,8 @@ block content
 				h1= pageTitle
 	- var x;
 	.cards
-		.card.cardThird
-			.card-wrap.cardThird-wrap
+		.card.card-third
+			.card-wrap.card-third-wrap
 				.card__imgbox.card__imgbox_xl(style='background-image: url(img/photo-01.png);')
 		.card.cardTwoThirds
 			.content-text
