--- a/pug/blocks/_block-text-imgr.pug
+++ b/pug/blocks/_block-text-imgr.pug
@@ -14,8 +14,8 @@
       p
         | Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
       a.button.card__more(href='#') Читать далее
-  .card.cardThird
-    .cardThird__imgbox.card__imgbox(style='background-image: url(img/block-img-05.jpg);')
+  .card.card-third
+    .card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-05.jpg);')
       .card-warning-text.hide
         p
   .card.cardTwoThirds
@@ -25,7 +25,7 @@
       p
         | Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
       a.button.card__more(href='#') Читать далее
-  .card.cardThird
-    .cardThird__imgbox.card__imgbox(style='background-image: url(img/block-img-06.jpg);')
+  .card.card-third
+    .card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-06.jpg);')
       .card-warning-text.hide
         p
