--- a/pug/cards/_cards-two-thirds_right.pug
+++ b/pug/cards/_cards-two-thirds_right.pug
@@ -1,10 +1,10 @@
 .cards.cards-two-thirds.cards-two-thirds_right
-	.card.cardThird
-		.card-wrap.cardThird-wrap
-			.cardThird__imgbox.card__imgbox(style='background-image: url(img/news-third-04.jpg);')
+	.card.card-third
+		.card-wrap.card-third-wrap
+			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-04.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardThird__content
+			.card__content.card-third__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ПС
@@ -15,7 +15,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardThird__title
+				.card__title.card-third__title
 					a(href='#')
 						| Обход управлющего 
 						br
