--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -402,7 +402,7 @@
 			}
 		}
 	}
-	&Third {
+	&-third {
 		max-width: 33.333333%;
 		flex: 0 0 33.333333%;
 		// &-wrap {
@@ -419,7 +419,7 @@
 		}
 		&_fullHeightImg {
 			color: $light-color;
-			.cardThird__content {
+			.card-third__content {
 				margin-top: 210px;
 				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
 			}
@@ -440,7 +440,7 @@
 			}
 		}
 	}
-	&Half {
+	&-half {
 		max-width: 50%;
 		flex: 0 0 50%;
 		&-imgbox {
@@ -450,7 +450,7 @@
 		}
 		&_fullHeightImg {
 			color: $light-color;
-			.cardHalf__content {
+			.card-half__content {
 				margin-top: 220px;
 				padding-top: 55px;
 				background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.14) 14%,rgba(0,0,0,1) 100%); 
