--- a/pug/cards/_cards-full-galery-slider-imgfull-text.pug
+++ b/pug/cards/_cards-full-galery-slider-imgfull-text.pug
@@ -8,7 +8,7 @@
 			.content-titlebox
 				h2 Светлый вариант галереи с описанием
 
-	.card.card_slim
+	.card.margin-bottom-15
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
 
