--- a/pug/modals/_modal-content-comments.pug
+++ b/pug/modals/_modal-content-comments.pug
@@ -1,9 +1,9 @@
 .cards.comments-dark
-	.card.card_slim
+	.card.margin-bottom-15
 		.content-title
 			.content-titlebox
 				h2 Комментарии к "Новые технологии на ВМЗ в 2019"
-	.card.card_slim#allComentators
+	.card.margin-bottom-15#allComentators
 		.comment#commentator_01
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-01.jpg)')
