--- a/pug/post.pug
+++ b/pug/post.pug
@@ -5,12 +5,12 @@ block content
 	.card.card-full-head_special
 	.cards
 		article(id=ID).article
-			.card.card_slim
+			.card.margin-bottom-15
 				.article-imgwrap.article-imgwrap_slim
 					.article-imgbox.article-imgbox_head(style='background-image: url(img/post-img-01.jpg);')
 				- var text = '24 Сентября 2018';
 				include modules/_tag-box
-			.card.card_slim
+			.card.margin-bottom-15
 				.content-title
 					.content-titlebox
 						h3 Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы
@@ -51,11 +51,11 @@ block content
 		include modules/_tag-box
 	.card
 		hr.card-hr
-	.card.card_slim
+	.card.margin-bottom-15
 		.content-title
 			.content-titlebox
 				h2 Комментарии
-	.card.card_slim#allComentators
+	.card.margin-bottom-15#allComentators
 		- var items = [];
 		.comment#commentator_01
 			.comment-box
