--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -4,7 +4,7 @@ block vars
 	-var pageTitle = 'Константин Александрович Константинопольский';
 	
 block content
-	.card.card_slim
+	.card.margin-bottom-15
 		.content-title
 			.content-titlebox
 				h1= pageTitle
