--- a/pug/video.pug
+++ b/pug/video.pug
@@ -16,7 +16,7 @@ block content
 				.content-titlebox
 					h2 Новые технологии на ВМЗ в 2019
 
-		.card.card_slim
+		.card.margin-bottom-15
 			- var text= '24 Сентября 2018';
 			include modules/_tag-box
 		include cards/_card-full-slider-video
@@ -31,7 +31,7 @@ block content
 				.content-titlebox
 					h2 Новые технологии на ВМЗ в 2019
 
-		.card.card_slim
+		.card.margin-bottom-15
 			- var text= '24 Сентября 2018';
 			- var cardSettings = {advantClass: 'card__videobox card__imgbox_xl'};
 			include modules/_tag-box
@@ -47,7 +47,7 @@ block content
 				.content-titlebox
 					h2 Новые технологии на ВМЗ в 2019
 
-		.card.card_slim
+		.card.margin-bottom-15
 			- var text= '24 Сентября 2018';
 			- var cardSettings = {advantClass: 'card__videobox card__imgbox_sm'};
 			include modules/_tag-box
