--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,7 +42,7 @@
 @import '_content.scss';
 @import '_cards.scss';
 @import '_widget-calendar.scss';
-@import '_widgets.scss';
+@import '_widget.scss';
 @import '_calendar.scss';
 @import '_article.scss';
 @import '_comment.scss';
