--- a/pug/cards/_cards-galery-slider-mosaic.pug
+++ b/pug/cards/_cards-galery-slider-mosaic.pug
@@ -8,7 +8,7 @@
 			.content-titlebox
 				h2 Новые технологии на ВМЗ в 2019
 
-	.card.card_slim
+	.card.margin-bottom-15
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
 	include _card-mosaic-slider
