--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -128,7 +128,7 @@
 		@include clearfix;
 		&__left {
 			vertical-align: middle;
-			display: inline-block;
+			// display: inline-block;
 			float: left;
 			font-family: Roboto;
 			font-size: 20px;
