--- a/css/style.css
+++ b/css/style.css
@@ -975,6 +975,7 @@ body {
   color: #5e6167;
   font-weight: 400;
   overflow-x: hidden;
+  line-height: normal;
 }
 
 img {
@@ -985,8 +986,36 @@ img {
   display: none;
 }
 
-.margin-bottom-15 {
+*.margin-bottom-0 {
+  margin-bottom: 0px;
+}
+
+*.margin-bottom-5 {
+  margin-bottom: 5px;
+}
+
+*.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+*.margin-bottom-15 {
   margin-bottom: 15px;
+}
+
+*.margin-bottom-20 {
+  margin-bottom: 20px;
+}
+
+*.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+
+*.bg-color-light {
+  background-color: #ffffff;
+}
+
+*.bg-color-dark-1 {
+  background: #eeefef;
 }
 
 h1,
@@ -1034,6 +1063,12 @@ h6,
   margin-left: 5px;
 }
 
+ol,
+ul,
+dl {
+  margin-bottom: 0;
+}
+
 p,
 .section-text,
 .text {
@@ -1066,6 +1101,8 @@ h2 span,
 }
 
 .breadcrumb {
+  display: block;
+  margin: 0;
   padding: 15px 0 15px;
 }
 
@@ -2574,6 +2611,7 @@ h2 span,
 
 .nav-more {
   display: inline-block;
+  vertical-align: baseline;
 }
 
 .nav-more-list {
@@ -2933,6 +2971,7 @@ h2 span,
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 0;
 }
 
 .menu-horizontal__box {
@@ -2995,17 +3034,8 @@ h2 span,
 }
 
 .content-group {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
   padding-top: 37px;
   padding-top: 18px;
-  margin-left: -15px;
-  margin-right: -15px;
 }
 
 .content-title::after {
@@ -3360,9 +3390,7 @@ h2 span,
 }
 
 .card {
-  padding: 0 15px;
-  width: 100%;
-  margin-bottom: 30px;
+  border: none;
 }
 
 .card::after {
@@ -3649,7 +3677,6 @@ h2 span,
 .card__title {
   margin-bottom: 15px;
   font-family: "PT Serif", serif;
-  font-size: 17px;
 }
 
 .card__title h1,
@@ -3658,7 +3685,7 @@ h2 span,
 .card__title h4,
 .card__title h5,
 .card__title a {
-  font-size: 1em;
+  font-size: 17px;
 }
 
 .card__title a {
@@ -3688,7 +3715,7 @@ h2 span,
 }
 
 .card__text p {
-  font-size: 1.0625em;
+  font-size: 17px;
   margin-bottom: 15px;
 }
 
@@ -3698,7 +3725,7 @@ h2 span,
 
 .card__text h3 {
   margin-bottom: 18px;
-  font-size: 1.375em;
+  font-size: 22px;
 }
 
 .card-date {
