--- a/pug/cards/_card-full-advant-news.pug
+++ b/pug/cards/_card-full-advant-news.pug
@@ -1,23 +1,25 @@
-.card.card-full
-	.card-wrap.card-full-wrap.card_advant-news
-		.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
-			.card-warning-text.hide
-				p
-		.card__content.card-full__content
-			.tagbox
-				.tag
-					button.button.button-tag Новости ОМК
-				.like-card
-					button.like-button.comment-button
-						i.icon-comment
-						span.like-count 23
-					button.like-button
-						i.icon-like
-						span.like-count 1286
-			.card__title.card-full__title
-				a(href='#') Хороший старт!
-			.card__text.card-full__text
-				p
-					| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
-			.card-date
-				span 24 Сентября 2018
+//- .card-wrap.card-full-wrap.card_advant-news
+.row
+	.col-xl-12
+		.card.card-full.card_advant-news.bg-color-dark-1.margin-bottom-30
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+				.card-warning-text.hide
+					p
+			.card__content.card-full__content
+				.tagbox
+					.tag
+						button.button.button-tag Новости ОМК
+					.like-card
+						button.like-button.comment-button
+							i.icon-comment
+							span.like-count 23
+						button.like-button
+							i.icon-like
+							span.like-count 1286
+				.card__title.card-full__title
+					a(href='#') Хороший старт!
+				.card__text.card-full__text
+					p
+						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
+				.card-date
+					span 24 Сентября 2018
