--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -9,7 +9,8 @@ html(lang='ru')
 		meta(name='description', content='')
 		meta(name='author', content='')
 		link(rel='stylesheet', href='css/normalize.css')
-		link(rel='stylesheet', href='css/bootstrap/bootstrap-grid.css')
+		//- link(rel='stylesheet', href='css/bootstrap/bootstrap-grid.css')
+		link(rel='stylesheet', href='css/bootstrap/bootstrap.css')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.structure.min.css')
 		link(rel='stylesheet', href='jquery-ui-1.12.1.custom/jquery-ui.min.css')
 		link(rel='stylesheet', href='slick/slick-theme.css')
