--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -5,10 +5,11 @@
 	@include clearfix;
 }
 .card {
-	padding: 0 15px;
-	width: 100%;
-	margin-bottom: 30px;
-	@include clearfix;
+  border: none;
+	// padding: 0 15px;
+	// width: 100%;
+	// margin-bottom: 30px;
+  @include clearfix;
 	&-wrap {
 		display: flex;
 		flex-direction: column;
@@ -213,9 +214,8 @@
 	&__title {
 		margin-bottom: 15px;
 		font-family: "PT Serif", serif;
-		font-size: 17px;
 		& h1, h2, h3, h4, h5, a {
-			font-size: 1em;
+      font-size: 17px;
 		}
 		a {
 			display: block;
@@ -237,7 +237,7 @@
 		font-weight: 400;
 		line-height: 23px;
 		p {
-			font-size: 1.0625em;
+			font-size: 17px;
 			margin-bottom: 15px;
 			&:last-child {
 				margin-bottom: 0;
@@ -245,7 +245,7 @@
 		}
 		h3 {
 			margin-bottom: 18px;
-			font-size: 1.375em;
+			font-size: 22px;
 		}
 	}
 	&-date {
