--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -4,12 +4,12 @@
 	min-height: 3500px;
 
 	&-group {
-		display: flex;
-		flex-wrap: wrap;
+		// display: flex;
+		// flex-wrap: wrap;
 		padding-top: 37px;
 		padding-top: 18px;
-		margin-left: -15px;
-		margin-right: -15px;
+		// margin-left: -15px;
+		// margin-right: -15px;
 	}
 
 	&-title {
@@ -189,9 +189,9 @@
 			}
 		}
 	}
-	&__searchbox {
+	// &__searchbox {
 
-	}
+	// }
 	&__search {
 		float: left;
 	}
