--- a/pug/cards/_card-half-slider.pug
+++ b/pug/cards/_card-half-slider.pug
@@ -1,11 +1,13 @@
 -var cardSettings = {};
-.card.card-half-slider
-	.card-half-slider-wrap.card-wrap
-		.card-half-slider__item
-			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
-		.card-half-slider__item
-			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
-		.card-half-slider__item
-			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
-		.card-half-slider__item
-			.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
+.row
+	.col-xl-12
+		.card.card-half-slider.margin-bottom-30
+			.card-half-slider-wrap.card-wrap
+				.card-half-slider__item
+					.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
+				.card-half-slider__item
+					.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
+				.card-half-slider__item
+					.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/news-half-full-img-01.jpg);')
+				.card-half-slider__item
+					.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
