--- a/pug/cards/_cards-third.pug
+++ b/pug/cards/_cards-third.pug
@@ -1,6 +1,8 @@
-.cards.cards-third
+//- .cards.cards-third
 	.card.card-third
-		.card-wrap.card-third-wrap
+.row
+	.col-xl-4
+		.card.card-wrap.card-third-wrap
 			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-01.jpg);')
 				.card-warning-text.hide
 					p
@@ -22,7 +24,7 @@
 						| трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.card-third
+	.col-xl-4
 		.card-wrap.card-third-wrap
 			.card-third__imgbox.card__imgbox(style='background-image: url(img/news-third-02.jpg);')
 				.card-warning-text
@@ -45,23 +47,24 @@
 						|  директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
-	.card.card-third.card-third_fullHeightImg
-		.card-wrap.card-third-wrap_fullHeightImg(style='background-image: url(img/news-third-full-img-01.jpg);')
-			.card__content.card-third__content
-				.tagbox
-					.tag
-						button.button.button-tag.button-tag_dark Новости ПС
-					.like-card.like-card_light
-						button.like-button.like-button_light.comment-button
-							i.icon-comment
-							span.like-count 23
-						button.like-button.like-button_light
-							i.icon-like
-							span.like-count 1286
-				.card__title.card-third__title
-					a(href='#')
-						| Насосно-компрессорные 
-						br
-						| трубы ТЭСЦ-1
-				.card-date.card-date_light
-					span 24 Сентября 2018
+	.col-xl-4
+		.card.card-third_fullHeightImg
+			.card-wrap.card-third-wrap_fullHeightImg(style='background-image: url(img/news-third-full-img-01.jpg);')
+				.card__content.card-third__content
+					.tagbox
+						.tag
+							button.button.button-tag.button-tag_dark Новости ПС
+						.like-card.like-card_light
+							button.like-button.like-button_light.comment-button
+								i.icon-comment
+								span.like-count 23
+							button.like-button.like-button_light
+								i.icon-like
+								span.like-count 1286
+					.card__title.card-third__title
+						a(href='#')
+							| Насосно-компрессорные 
+							br
+							| трубы ТЭСЦ-1
+					.card-date.card-date_light
+						span 24 Сентября 2018
