--- a/pug/index.pug
+++ b/pug/index.pug
@@ -6,7 +6,7 @@ block content
 	include page/_page-head-filters
 
 	include cards/_card-full-advant-news
-	#cardModalSlider-01.cards
+	#cardModalSlider-01
 		include cards/_card-full-slider
 
 	include cards/_card-half-slider
