--- a/pug/cards/_card-full-slider.pug
+++ b/pug/cards/_card-full-slider.pug
@@ -1,18 +1,20 @@
-.card.card-full.card-full-slider
-	.post-info
-		.post-info__title
-			span.slider-number #54 из 82:
-			| Первый запуск цеха автоматизации процессов заводского производства 152
-		.post-info__like
-			.post-info__date 25.12.2018
-			.like-card.post-info__likebox
-				button.like-button
-					i.icon-like
-					span.like-count 2586
-	.card-full-slider-wrap.card-wrap.card-full-wrap
-		- var imagesUrl = ['img/img-block-full-01.jpg', 'img/img-block-full-03.jpg', 'img/img-block-full-04.jpg', 'img/img-block-full-02.jpg'];
-		- var imagesUrl = imagesUrl.concat(imagesUrl);
-		each imgUrl in imagesUrl
-			.card-full-slider__item
-				.card-full-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-01')
-					img.card-image(src=imgUrl)
+.row
+	.col-xl-12
+		.card.margin-bottom-30.card-full-.card-full-slider-.card-slider
+			.post-info
+				.post-info__title
+					span.slider-number #54 из 82:
+					| Первый запуск цеха автоматизации процессов заводского производства 152
+				.post-info__like
+					.post-info__date 25.12.2018
+					.like-card.post-info__likebox
+						button.like-button
+							i.icon-like
+							span.like-count 2586
+			.card-full-slider-wrap.card-wrap.card-full-wrap
+				- var imagesUrl = ['img/img-block-full-01.jpg', 'img/img-block-full-03.jpg', 'img/img-block-full-04.jpg', 'img/img-block-full-02.jpg'];
+				- var imagesUrl = imagesUrl.concat(imagesUrl);
+				each imgUrl in imagesUrl
+					.card-full-slider__item
+						.card-full-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-01')
+							img.card-image(src=imgUrl)
